--- a/examples/helloworld/pom.xml
+++ b/examples/helloworld/pom.xml
@@ -40,7 +40,7 @@
         <version>${jib-maven-plugin.version}</version>
         <configuration>
           <to>
-            <image>gcr.io/REPLACE-WITH-YOUR-GCP-PROJECT/image-built-with-jib</image>
+            <image>quay.io/devtron/preview</image>
           </to>
         </configuration>
         <executions>
